fix scrollbar issue on windows

--- a/src/content.css
+++ b/src/content.css
@@ -111,8 +111,8 @@
   height: fit-content;
   padding: 0px;
   #mea-vueapp-iframe {
-    width: 300px;
-    height: 596px;
+    width: 370px;
+    height: 610px;
     border: none;
   }
 
